--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-bar-usb (3.0.1) unstable; urgency=low
+
+  * Maemo Leste
+
+ -- Ivan J. <parazyd@dyne.org>  Fri, 02 Mar 2018 00:33:33 +0100
+
 hildon-status-bar-usb (3.0) unstable; urgency=low
 
   * Initial import
