--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hildon-status-bar-usb (3.0.2) unstable; urgency=low
+
+  * Improvements to udev driver loading
+  * Laying foundations for multi-device support
+
+ -- Merlijn B. W. Wajer <merlijn@wizzup.org>  Sun, 04 Mar 2018 13:30:30 +0100
+
 hildon-status-bar-usb (3.0.1) unstable; urgency=low
 
   * Maemo Leste
