--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+hildon-status-bar-usb (3.0.4) unstable; urgency=low
+
+  * Fix build to not depend on libusbgx
+
 hildon-status-bar-usb (3.0.3) unstable; urgency=low
 
   * Port to use udev enabled ke-recv
