--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+hildon-status-bar-usb (3.0.5) unstable; urgency=low
+
+  * Depend on ke-recv, not ke-revc
+
 hildon-status-bar-usb (3.0.4) unstable; urgency=low
 
   * Fix build to not depend on libusbgx
