--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-bar-usb (3.0.6) unstable; urgency=low
+
+  * Add Motorola droid 4 support
+
+ -- Merlijn B. W. Wajer <merlijn@wizzup.org>  Fri, 02 Nov 2018 15:17:52 +0100
+
 hildon-status-bar-usb (3.0.5) unstable; urgency=low
 
   * Depend on ke-recv, not ke-revc
