--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-bar-usb (3.1.1) unstable; urgency=low
+
+  * Deprecate usage of g_type_class_add_private
+
+ -- Merlijn B. W. Wajer <merlijn@wizzup.org>  Sun, 26 Jan 2020 20:23:56 +0100
+
 hildon-status-bar-usb (3.1.0) unstable; urgency=low
 
   * Port to dh10 and autotools
